apps/share/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: share
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: share
  template:
    metadata:
      labels:
        app: share
    spec:
      imagePullSecrets:
        - name: pikol-pull-secret
      containers:
        - name: share
          image: ghcr.io/moot-app/share:x.x.x
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              memory: 100Mi
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            timeoutSeconds: 5
