apps/share/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: share
spec:
  selector:
    app: share
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 3000
